@@ -4,7 +4,7 @@
 AUTOMAKE_OPTIONS = 1.4 gnits
 MAINT_CHARSET = latin1
 #
-INSTALL_PROGRAM = @INSTALL_PROGRAM@ -s -m 555
+INSTALL_SCRIPT = ${INSTALL} -m 755
 
 CLEANFILES = *~ ${SCRIPTS}
 
