@@ -1,3 +1,9 @@
+2001-08-26  Thorsten Kukuk  <kukuk@suse.de>
+
+	* scripts/Makefile.am: Don't strip scripts
+	* ypserv/server.c: Fix null byte termination of order number
+	(reported by Juergen Holm <holm@Theorie.Physik.UNI-Goettingen.DE>)
+
 2001-08-20  Thorsten Kukuk  <kukuk@suse.de>
 
 	* configure.in: Create ypserv/ypserv.8
